# LangJam2025

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  ROADMAP.md  vcpkg.json
assets/: test1.prg
bytecode/: bytecode_builder.cpp  bytecode_builder.h  bytecode_io.h  opcodes.h
lang/: CMakeLists.txt  ast.hpp  diagram_visitor.cpp  diagram_visitor.hpp  main.cpp  parser.cpp  parser.hpp  tokeniser.hpp  tokens.hpp  visitor.hpp
min/: CMakeLists.txt  main.cpp
runtime/: CMakeLists.txt  bytecode_io.cpp  bytecode_io.h  demo_main.cpp  main.cpp  vm.h
scripts/: build.ps1  build_debug.ps1  build_lang_debug.ps1  build_release.ps1  build_runtime_debug.ps1  clean_build.ps1  copy_sdl2_dll.ps1  setup.ps1
src/: main.cpp
vm/: bytecode_builder.h  demo_main.cpp  vm.cpp  vm.h
